Configurando correctamente HATEOAS